syntax = "proto3";

package sona.v1;

option go_package = "sona/gen/sonav1;sonav1";

message CreateUserRequest {
  string name = 1;
}

message User {
  int32 id = 1;
  string name = 2;
}

message GetUserRequest {
  int32 id = 1;
}

message ListUsersRequest {}

message ListUsersResponse {
  repeated User users = 1;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (User) {}
  rpc GetUser(GetUserRequest) returns (User) {}
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {}
} 